update style & title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HTML, CSS and JavaScript demo</title>
+<title>Login Form</title>
 <link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -14,6 +14,5 @@
   </form>
     <p><a href="https://zil.ink/alireza.ch">made by alireza cheraghliei</a></p>
     </div>
-<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
